--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-	"name": "sahay",
+	"name": "sahyog",
 	"version": "1.0.0",
+	"description": "Dashboard for Sahyog: An app to help people share resources during the pandemic.",
 	"main": "app.js",
 	"scripts": {
 		"start": "node app.js",
@@ -22,12 +23,14 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-rate-limit": "^5.1.3",
 		"express-session": "^1.17.1",
 		"firebase": "^8.6.1",
 		"firebase-admin": "^9.8.0",
 		"mongoose": "^5.9.20",
 		"passport": "^0.4.1",
-		"passport-local": "^1.0.0"
+		"passport-local": "^1.0.0",
+		"pug": "^3.0.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.4"
